<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/raptors"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_raptors" />
    <item
        android:id="@+id/trex"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_trex" />
    <item
        android:id="@+id/aviary"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_aviary" />
    <item
        android:id="@+id/triceratops"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_triceratops" />
    <item
        android:id="@+id/all"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/all" />

</menu>